--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
     "react-hot-toast": "^2.4.1",
     "react-modal-video": "^2.0.2",
     "swiper": "^9.3.2",
